check input